--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="FR">
+<html lang="fr">
   <head>
     <meta charset="utf-8">
     <title>Exercice HTML partie1 exercice2</title>
